Fix Bug de overflow  ao abrir o menu drawer

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -17,10 +17,7 @@ b {
      width: 0.395rem !important;
 }
 .menu-aberto {
-     position: fixed;
-     overflow: hidden;
-     width: 100%;
-     height: 100%;
+     overflow-y: hidden !important;
 }
 
 ::-webkit-scrollbar {
